# capacity-compass

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml
configs/: README.md  e2e_test_cases.yaml  estimation.yaml  hardware.yaml  models_deepseek.yaml  models_qwen3.yaml  scenarios.yaml
docs/: capacity_compass_design_spec.md  customer_preview.md  dev_tasks.md  extract_preview.md  research_source_map.md  sources.md
prompts/: extract_request_zh.txt  sales_summary_zh.txt
scripts/: build_docker_offline.sh  extract_batch.py
src/capacity_compass/: __init__.py  config_loader.py  config_types.py  hardware_registry.py  models_registry.py  scenarios_registry.py  settings.py
src/capacity_compass/api/: schemas.py  server.py
src/capacity_compass/pipeline/: __init__.py  card_sizer.py  evaluation_builder.py  extractor.py  hardware_filter.py  llm_summary.py  normalizer.py  recommender.py  requirements.py  service.py
tests/: conftest.py  test_card_and_recommender.py  test_config_loader.py  test_e2e.py  test_evaluation_builder.py  test_extractor.py  test_llm_summary.py  test_models_registry.py  test_normalizer.py  test_requirements.py  test_requirements_cases.py  test_service.py  test_settings.py
tests/data/: e2e_test_cases.yaml  requirements_cases.yaml
