[project]
name = "capacity-compass"
version = "0.1.0"
description = "LLM 推理算力评估与硬件推荐"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
llm = ["requests>=2.32"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
  "isort>=5",
  "mypy>=1.11",
]
cache-dir = ".uv_cache"
index-url = "https://mirrors.ustc.edu.cn/pypi/web/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
